--- a/detail/ID_dangerousName.html
+++ b/detail/ID_dangerousName.html
@@ -56,6 +56,7 @@ void bar() {
 <h3>参考</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items">CWE-326
-CWE-327</div>
+CWE-327
+SEI CERT MSC25-C</div>
 </article>
 </html>
