--- a/detail/ID_danglingDeref.html
+++ b/detail/ID_danglingDeref.html
@@ -68,8 +68,9 @@
 <h3>相关</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items"><a href="./ID_illAccess.html" class="related-link">ID_illAccess</a>
+<a href="./ID_illLifetime.html" class="related-link">ID_illLifetime</a>
 <a href="./ID_localAddressFlowOut.html" class="related-link">ID_localAddressFlowOut</a>
-<a href="./ID_illLifetime.html" class="related-link">ID_illLifetime</a></div>
+<a href="./ID_missingResetNull.html" class="related-link">ID_missingResetNull</a></div>
 
 <h3>依据</h3>
 <hr class="dashed-hr"/>
@@ -78,7 +79,8 @@ ISO/IEC 9899:2011 6.5.3.2(4)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">CWE-825
+<div class="ref-items">CWE-416
+CWE-825
 C++ Core Guidelines ES.65
 SEI CERT EXP54-CPP</div>
 </article>
