--- a/detail/ID_explicitDtorCall.html
+++ b/detail/ID_explicitDtorCall.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：显式调用析构函数会提前结束对象的生命周期，之后对该对象的任何访问都会导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：何时调用析构函数应由语言的底层机制决定，程序不宜显式调用析构函数。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,44 +21,39 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>显式调用析构函数会提前结束对象的生命周期，之后对该对象的任何访问都会导致标准未定义的行为。</p>
+<p>何时调用析构函数应由语言的底层机制决定，程序不宜显式调用析构函数。</p>
 
-<p>对于在栈上定义的对象，流程离开相关作用域时会再次自动调用其析构函数；对于动态创建的对象，用 delete 回收时也会调用其析构函数，使对象在生命周期之外被访问，导致标准未定义的行为。 </p>
+<p>显式调用析构函数后，应释放对象的内存空间并舍弃对象，或者重新构造对象，否则访问对象的任何非静态成员都会导致标准未定义的行为。显式调用析构函数会提前结束对象的生命周期，易被误用，不应作为惯用方法。</p>
 
 <p>示例：</p>
 <code>class A {
     int* p = new int[123];
-
 public:
-   ~A() {
-        delete[] p;
-    }
+   ~A() { delete[] p; }
 };
 
 void foo() {
     A a;
     a.~A();   //<i> Non-compliant, explicitly call the destructor</i>
-}             //<i> ~A() twice called, crash...</i></code>
+}             //<i> ~A() twice called, crash</i></code>
 <p>例中对象 a 的析构函数被显式调用，foo 返回前会再次调用析构函数，造成内存被重复释放。应去掉显式调用，由类提供提前释放资源的方法，并保证资源不会被重复释放。</p>
 
-<p>例外：</p>
-<code>char* p = new char[sizeof(Type)];
-Type* q = new (p) Type;
-....
-q-&gt;~Type();   //<i> Compliant, used with replacement new</i>
-delete[] p;</code>
-<p>与 replacement new 配合的显式析构是实现容器或内存池的常规手段，可不受本规则约束。</p>
+<p>处理专用硬件资源或开发资源管理设施时，显式析构可能是必要的，一般与“<a href="https://en.cppreference.com/w/cpp/language/new#Placement_new" target="_blank" class="dashed-link">placement new</a>”配合使用，如：</p>
+<code>size_t n = sizeof(A);
+alignas(A) byte buf[n];
+A* p = new(buf) A;      //<i> Place an object of ‘A’ into the pre-allocated ‘buf’</i>
+p-&gt;~A();                //<i> OK, used with the placement new</i></code>
+<p>例中 new(buf) A 在指定的内存空间中构造对象，通过这种方式构造的对象可被显式析构。</p>
 
 </main>
 
-<h3>相关</h3>
-<hr class="dashed-hr"/>
-<div class="ref-items"><a href="./ID_missingResetNull.html" class="related-link">ID_missingResetNull</a></div>
 
 <h3>依据</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items">ISO/IEC 14882:2003 12.4(14)-undefined
-ISO/IEC 14882:2011 12.4(15)-undefined</div>
+ISO/IEC 14882:2011 12.4(15)-undefined
+ISO/IEC 14882:2017 15.4(15)
+ISO/IEC 14882:2017 15.4(16)-undefined</div>
 
 
 </article>
