--- a/detail/ID_for_counterChangedInBody.html
+++ b/detail/ID_for_counterChangedInBody.html
@@ -39,7 +39,8 @@
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">C++ Core Guidelines ES.86
+<div class="ref-items">CWE-1095
+C++ Core Guidelines ES.86
 MISRA C 2004 13.6
 MISRA C++ 2008 6-5-3</div>
 </article>
