--- a/detail/ID_if_missingEndingElse.html
+++ b/detail/ID_if_missingEndingElse.html
@@ -51,6 +51,7 @@ else {
 <h3>参考</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items">MISRA C 2012 15.7
-MISRA C++ 2008 6-4-2</div>
+MISRA C++ 2008 6-4-2
+SEI CERT MSC01-C</div>
 </article>
 </html>
