--- a/detail/ID_if_tooManyElseIf.html
+++ b/detail/ID_if_tooManyElseIf.html
@@ -40,8 +40,13 @@ else {
 <hr class="dashed-hr"/>
 <div class="ref-items">maxElseIfCount: 分枝数量上限，超过则报出</div>
 
+<h3>相关</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="./ID_switch_tooManyCases.html" class="related-link">ID_switch_tooManyCases</a></div>
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">CWE-1121</div>
 </article>
 </html>
