--- a/detail/ID_literal_magicString.html
+++ b/detail/ID_literal_magicString.html
@@ -52,6 +52,7 @@ void foo(const string&amp; url)
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">C++ Core Guidelines ES.45</div>
+<div class="ref-items">CWE-1106
+C++ Core Guidelines ES.45</div>
 </article>
 </html>
