--- a/detail/ID_nestedTooDeep.html
+++ b/detail/ID_nestedTooDeep.html
@@ -52,6 +52,8 @@ maxNamespaceNestedDepth: 命名空间最大嵌套层数，超过则报出</div>
 
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">CWE-1124</div>
 </article>
 </html>
