--- a/detail/ID_nonPrivateData.html
+++ b/detail/ID_nonPrivateData.html
@@ -21,9 +21,11 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>类的数据成员均应设为 private，对外统一由成员函数提供访问方法，且应避免返回 private 成员的非常量引用或指针。</p>
+<p>类的数据成员均应设为 private，统一由成员函数提供访问方法，并避免返回数据成员的非常量引用或指针。</p>
 
 <p>将类的所有接口都实现为成员函数，由成员函数按指定逻辑读写数据，以便保证有效地改变对象状态。良好的接口设计会对代码的职责进行合理划分，显著提升可维护性。理想状态下，当有错误需要修正或有功能需要调整时，只改动相关接口的实现即可，调用接口的代码不需要改动，从而将改动降到最低。这种设计的基础便是将数据设为 private，只能由本类的成员函数访问，否则数据可被各个模块随意读写，当有一处需要改动时，很难控制其影响范围。</p>
+
+<p>另外，充分隐藏数据的内部细节也是重要的安全保障，可以有效避免攻击者窃取数据或引发程序的意外行为。</p>
 
 <p>常量数据成员不可被改变，所以可不受本规则约束。</p>
 
@@ -59,6 +61,7 @@ public:
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C++ 2008 11-0-1</div>
+<div class="ref-items">CWE-1061
+MISRA C++ 2008 11-0-1</div>
 </article>
 </html>
