--- a/detail/ID_recursion.html
+++ b/detail/ID_recursion.html
@@ -46,7 +46,8 @@
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C 2012 17.2
+<div class="ref-items">CWE-674
+MISRA C 2012 17.2
 MISRA C++ 2008 7-5-4</div>
 </article>
 </html>
