--- a/detail/ID_switch_missingDefault.html
+++ b/detail/ID_switch_missingDefault.html
@@ -53,6 +53,7 @@ default:
 <hr class="dashed-hr"/>
 <div class="ref-items">CWE-478
 MISRA C 2012 16.4
-MISRA C++ 2008 6-4-6</div>
+MISRA C++ 2008 6-4-6
+SEI CERT MSC01-C</div>
 </article>
 </html>
