--- a/detail/ID_switch_tooManyCases.html
+++ b/detail/ID_switch_tooManyCases.html
@@ -39,8 +39,13 @@ case 1000: .... break;   //<i> Non-compliant</i>
 <hr class="dashed-hr"/>
 <div class="ref-items">maxCasesCount: 分枝数量上限，超过则报出</div>
 
+<h3>相关</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="./ID_if_tooManyElseIf.html" class="related-link">ID_if_tooManyElseIf</a></div>
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">CWE-1121</div>
 </article>
 </html>
