--- a/detail/ID_tooManyFields.html
+++ b/detail/ID_tooManyFields.html
@@ -44,6 +44,8 @@ maxUnionFieldsCount: 联合体数据成员的数量上限，超过则报出</div
 
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">CWE-1093</div>
 </article>
 </html>
