--- a/detail/ID_unreachableCode.html
+++ b/detail/ID_unreachableCode.html
@@ -74,6 +74,7 @@ for (;false;) { .... }   //<i> Non-compliant</i>
 <div class="ref-items">CWE-561
 MISRA C 2004 14.1
 MISRA C 2012 2.1
-MISRA C++ 2008 0-1-1</div>
+MISRA C++ 2008 0-1-1
+SEI CERT MSC12-C</div>
 </article>
 </html>
