--- a/detail/ID_unsuitableDeclaration.html
+++ b/detail/ID_unsuitableDeclaration.html
@@ -55,7 +55,8 @@ ISO/IEC 9899:2011 6.7.1(7)-undefined</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">MISRA C++ 2008 3-1-2
+<div class="ref-items">C++ Core Guidelines SF.3
+MISRA C++ 2008 3-1-2
 MISRA C++ 2008 3-3-1</div>
 </article>
 </html>
