--- a/detail/ID_warningDisabled.html
+++ b/detail/ID_warningDisabled.html
@@ -41,6 +41,8 @@
 <div class="ref-items"><a href="./ID_warningDefault.html" class="related-link">ID_warningDefault</a></div>
 
 
-
+<h3>参考</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items">CWE-1127</div>
 </article>
 </html>
