--- a/detail/UB/cpp-ub-59.html
+++ b/detail/UB/cpp-ub-59.html
@@ -47,7 +47,8 @@ ISO/IEC 14882:2011 12.4(15)-undefined</div>
 
 <h3>规则</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items"><a href="../ID_explicitDtorCall.html" class="related-link">ID_explicitDtorCall</a></div>
+<div class="ref-items"><a href="../ID_explicitDtorCall.html" class="related-link">ID_explicitDtorCall</a>
+<a href="../ID_this_deleteInDestructor.html" class="related-link">ID_this_deleteInDestructor</a></div>
 
 </article>
 </html>
