--- a/detail/ID_illMemberAccess.html
+++ b/detail/ID_illMemberAccess.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期已结束，如果继续访问会导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期均已结束，如果继续访问会导致标准未定义的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期已结束，如果继续访问会导致标准未定义的行为。</p>
+<p>当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期均已结束，如果继续访问会导致标准未定义的行为。</p>
 
 <p>示例：</p>
 <code>class A {
@@ -40,7 +40,7 @@ public:
         access(i);    //<i> Non-compliant, ‘i’ may no longer exist </i>
     }
 };</code>
-<p>例中 catch 子句均面向函数体，从属于“函数 try 块（function-try-block）”，当流程进入 catch 子句时成员 i 的生命周期已结束，不应被访问。</p>
+<p>例中 catch 子句均面向函数体，从属于“<a href="https://en.cppreference.com/w/cpp/language/function-try-block" target="_blank" class="dashed-link">函数 try 块（function-try-block）</a>”，当流程进入 catch 子句时成员 i 的生命周期已结束，不应被访问。</p>
 
 <p>应调整实现或将 try-catch 语句移入函数内：</p>
 <code>A::A() {
