--- a/detail/ID_literal_magicNumber.html
+++ b/detail/ID_literal_magicNumber.html
@@ -58,6 +58,7 @@ double bar(double a) {
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">C++ Core Guidelines ES.45</div>
+<div class="ref-items">CWE-1106
+C++ Core Guidelines ES.45</div>
 </article>
 </html>
