--- a/detail/ID_missingArraySize.html
+++ b/detail/ID_missingArraySize.html
@@ -48,6 +48,7 @@ extern int b[10];   //<i> Compliant</i>
 <hr class="dashed-hr"/>
 <div class="ref-items">MISRA C 2004 8.12
 MISRA C 2012 8.11
-MISRA C++ 2008 3-1-3</div>
+MISRA C++ 2008 3-1-3
+SEI CERT ARR02-C</div>
 </article>
 </html>
