--- a/detail/ID_sizeof_arrayParameter.html
+++ b/detail/ID_sizeof_arrayParameter.html
@@ -50,6 +50,7 @@ ISO/IEC 14882:2011 13.1(3)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">CWE-467</div>
+<div class="ref-items">CWE-467
+SEI CERT ARR01-C</div>
 </article>
 </html>
