--- a/detail/ID_unexpectedPrecedence.html
+++ b/detail/ID_unexpectedPrecedence.html
@@ -23,23 +23,34 @@
 <main>
 <p>对运算符优先级的错误理解是产生逻辑错误的主要原因之一。</p>
 
+<p>位运算、赋值、三元等表达式作为子表达式时，合理使用括号既能保证正确性，又能提高可读性。由于运算符的特性各不相同，较为灵活，难以用一条规则来规范，本规则集合将分开讨论，与优先级有关的规则均作为本规则的相关规则以供参考。</p>
+
 <p>示例：</p>
 <code>int foo(bool cond) {
     return 1 + cond? 2: 3;  //<i> Rather suspicious</i>
 }</code>
 <p>加号的优先级大于三元运算符，但 cond 是 bool 型变量，所以这种情况十分可疑。</p>
 
-<p>很可能应改为：</p>
+<p>应合理使用括号：</p>
 <code>int foo(bool cond) {
-    return 1 + (cond? 2: 3);
+    return 1 + (cond? 2: 3);  //<i> Right</i>
 }</code>
 
 </main>
 
+<h3>相关</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="./ID_macro_expNotEnclosed.html" class="related-link">ID_macro_expNotEnclosed</a>
+<a href="./ID_macro_paramNotEnclosed.html" class="related-link">ID_macro_paramNotEnclosed</a>
+<a href="./ID_illBoolOperation.html" class="related-link">ID_illBoolOperation</a>
+<a href="./ID_assignmentAsSubExpression.html" class="related-link">ID_assignmentAsSubExpression</a>
+<a href="./ID_nonPostfixSubCondition.html" class="related-link">ID_nonPostfixSubCondition</a>
+<a href="./ID_oddSubscripting.html" class="related-link">ID_oddSubscripting</a></div>
 
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">CWE-783</div>
+<div class="ref-items">CWE-783
+C++ Core Guidelines ES.41</div>
 </article>
 </html>
