--- a/detail/ID_literal_multicharacter.html
+++ b/detail/ID_literal_multicharacter.html
@@ -22,9 +22,9 @@
 </header>
 <main>
 <p>“多字符常量（multi-character literal）”指单引号之间有多个字符或非基本字符的常量，如：</p>
-<code>&#x27;abc&#x27;  //<i> has type int and implementation-defined value</i></code>
-<p>&#x27;中&#x27;   //<i> has type int and implementation-defined value</i></p>
-<p>L&#x27;文&#x27;  //<i> has type wchar_t and implementation-defined value</i></p>
+<code>&#x27;abc&#x27;  //<i> has type int and implementation-defined value</i>
+&#x27;中&#x27;   //<i> has type int and implementation-defined value</i>
+L&#x27;文&#x27;  //<i> has type wchar_t and implementation-defined value</i></code>
 <p>这种常量的值是由实现定义的，而且在形式上与字符或字符串常量非常相似，易被误用，故建议禁用。</p>
 
 <p>示例：</p>
